force-app/main/default/objects/HP_UserHistory__c/HP_UserHistory__c.object-meta.xml
<CustomObject>
    <label>HP_UserHistory</label>
    <nameField>
        <label>HP_UserHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HP_UserHistories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>