force-app/main/default/objects/HP_UserHistory__c/fields/HP_Date__c.field-meta.xml
<CustomField>
    <fullName>HP_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>