force-app/main/default/objects/HP_UserHistory__c/fields/HP_DureeTraitement__c.field-meta.xml
<CustomField>
    <fullName>HP_DureeTraitement__c</fullName>
    <label>Durée de traitement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>