force-app/main/default/objects/HP_UserHistory__c/fields/HP_NombreTraitements__c.field-meta.xml
<CustomField>
    <fullName>HP_NombreTraitements__c</fullName>
    <label>Nombre de traitements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>