force-app/main/default/objects/HP_UserHistory__c/fields/HP_Productive__c.field-meta.xml
<CustomField>
    <fullName>HP_Productive__c</fullName>
    <formula>(HP_DureeTraitement__c   /  HP_TempsPresence__c)</formula>
    <label>Productivité</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>