force-app/main/default/objects/HP_UserHistory__c/fields/HP_TempsPresence__c.field-meta.xml
<CustomField>
    <fullName>HP_TempsPresence__c</fullName>
    <label>Temps de présence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>